--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,14 @@ jobs:
       - run: make golangci-lint
       - slack/notify-on-failure:
           only_for_branches: main
-
   e2e-remote-docker:
     docker:
-      - image: docker/tilt-ctlptl-ci@sha256:74aa83c8c415c0a1c3a35c6a6debf10f463bd1794ed263f8acda8b375dd262db
+      - image: "docker/tilt-ctlptl-ci@sha256:52648a8a21b057c31f1970153285222fd1fcc89b78126143e3b5939b1364bece"
     steps:
       - checkout
       - setup_remote_docker
       - run: make install
       - run: test/kind/e2e.sh
-
   e2e:
     machine:
       image: ubuntu-2204:2023.04.2
@@ -43,7 +41,7 @@ jobs:
           sudo mv ./minikube-linux-amd64 /usr/local/bin/minikube
       - run: |
           set -ex
-          export KIND_VERSION=v0.26.0
+          export KIND_VERSION=v0.27.0
           curl -fLo ./kind-linux-amd64 "https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-amd64"
           chmod +x ./kind-linux-amd64
           sudo mv ./kind-linux-amd64 /usr/local/bin/kind
@@ -57,7 +55,6 @@ jobs:
           test/e2e.sh
       - slack/notify-on-failure:
           only_for_branches: main
-
   release-dry-run:
     docker:
       - image: golang:1.23-bookworm
@@ -90,7 +87,6 @@ jobs:
       - run: goreleaser --verbose --clean --skip=publish --snapshot
       - slack/notify-on-failure:
           only_for_branches: main
-
   release:
     docker:
       - image: golang:1.23-bookworm
@@ -123,7 +119,6 @@ jobs:
       - run: ./hack/release.sh
       - slack/status:
           mentions: "nick"
-
 workflows:
   version: 2
   build:
@@ -142,8 +137,8 @@ workflows:
     jobs:
       - release:
           context:
-          - Tilt Release CLI Context
-          - Tilt Docker Login Context
+            - Tilt Release CLI Context
+            - Tilt Docker Login Context
           filters:
             branches:
               only: never-release-on-a-branch
