--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,13 +1,35 @@
 version: "2"
+run:
+  go: "1.24"
+  allow-parallel-runners: true
 linters:
+  default: none
+  enable:
+    - copyloopvar
+    - staticcheck
+    - errcheck
+    - govet
+    - ineffassign
+    - misspell
+    - unconvert
+    - unused
   settings:
     staticcheck:
       checks:
-        - all
-        - "-ST1005" # error strings should not be capitalized
-        - "-QF1001" # demorgan's law
-        - "-ST1021" # comment forms
-        - "-ST1020" # comment forms
-        - "-ST1000" # comment forms
-        - "-ST1016" # silly naming rules
-        - "-QF1007" # silly conditional rules
+        # Using a deprecated function, variable, constant or field.
+        # https://staticcheck.dev/docs/checks/#SA1019
+        - "SA1*"
+        - "SA2*" # concurrency issues
+        - "SA3*" # testing issues
+        - "SA4*" # no-op issues
+        - "SA5*" # correctness issues
+        - "SA6*" # performance issues
+        - "SA9*" # dubious constructs
+
+formatters:
+  enable:
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/tilt-dev
